--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint components pages lib"
+    "lint": "eslint pages"
   },
   "dependencies": {
     "@material-ui/core": "4.1.3",
