--- a/package.json
+++ b/package.json
@@ -16,15 +16,5 @@
     "react": "16.8.6",
     "react-dom": "16.8.6"
   },
-  "devDependencies": {
-    "babel-eslint": "10.0.2",
-    "eslint": "6.0.1",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "5.1.0",
-    "eslint-plugin-import": "2.18.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-react": "7.14.2",
-    "prettier": "1.18.2"
-  }
+  "devDependencies": {}
 }
